2do commit de archivos: welcome.html, inicio-html, css/estilos.css

--- a/welcome.html
+++ b/welcome.html
@@ -12,7 +12,7 @@
     
         <div class="texto-inicial">
             <h1>BIENVENIDO A ASTROPLANET</h1>
-            <a href="index.html" class="ingresa">INGRESAR</a>
+            <a href="inicio.html" class="ingresa">INGRESAR</a>
         </div>       
        
    
