commit de la entrega de proyecto 1

--- a/welcome.html
+++ b/welcome.html
@@ -11,7 +11,7 @@
     <header class="header-welcome.html">
     
         <div class="texto-inicial">
-            <h1>BIENVENIDO A ASTROPLANET</h1>
+            <h1>BIENVENIDOS A ASTROPLANET</h1>
             <a href="inicio.html" class="ingresa">INGRESAR</a>
         </div>       
        
