--- a/inicio.html
+++ b/inicio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width"/>
+    <meta name="description" content="Astroplanet provee informacion sobre Astronomia, El Universo, Profesionales destacados">
+    <meta name="keywords" content="ASTRONOMIA, ASTROFISICA, UNIVERSO, PLANETAS, ESTRELLAS, ASTROFISICOS">
     <title>Astroplaneta</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@700&display=swap" rel="stylesheet">
