--- a/productos.html
+++ b/productos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Productos provee informacion sobre productos descatados de Astronomia">
+    <meta name="keywords" content="ASTRONOMIA, PRODUCTOS, TAZAS, CAMISAS, TELESCOPIOS">
     <title>Productos</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
