--- a/universo.html
+++ b/universo.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Universo provee informacion sobre El Universo. Planetas, Galaxias, Estrellas">
+    <meta name="keywords" content="ASTRONOMIA, UNIVERSO, PLANETAS, ESTRELLAS">
     <title>Universo</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
