adaptado todas las paginas a responsive, solo falta el navbar

--- a/welcome.html
+++ b/welcome.html
@@ -8,7 +8,8 @@
     <title>Astroplanet</title>
 </head>
 <body class="body-welcome">
-    <header class="header-welcome.html">
+<div class="container-welcome">
+    <main class="header-welcome.html">
     
         <div class="texto-inicial">
             <h1>BIENVENIDOS A ASTROPLANET</h1>
@@ -20,6 +21,7 @@
             <source src="C:\Coderhouse\multimedia\Pexels Videos 2695085.mp4"> 
         </video> 
     
-    </header>
+    </main>
+</div>
 </body>
 </html>
